* Add fm-gtk.h. * Include all header files in fm.h and fm-gtk.h. * Correctly reload icons when gtk+ icon theme gets changed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,7 @@ job_SOURCES = \
 	$(NULL)
 
 libfm_SOURCES = \
-	fm.c fm.h \
+	fm.c \
 	$(base_SOURCES) \
 	$(job_SOURCES) \
 	$(NULL)
@@ -57,6 +57,7 @@ exo_SOURCES = \
 	$(NULL)
 
 libfm_gtk_SOURCES = \
+	fm-gtk.c \
 	$(exo_SOURCES) \
 	gtk/fm-folder-view.c \
 	gtk/fm-folder-model.c \
@@ -100,6 +101,7 @@ LIBFM_INCLUDES = \
 	$(NULL)
 
 LIBFM_GTK_INCLUDES = \
+	fm-gtk.h \
 	gtk/fm-folder-view.h \
 	gtk/fm-folder-model.h \
 	gtk/fm-places-view.h \
