--- a/data/gnome-terminal.in
+++ b/data/gnome-terminal.in
@@ -11,6 +11,14 @@ LEN=`expr $LEN - $SKIP + 1`
 PATH=`expr substr "$PATH" $SKIP $LEN`
 export PATH
 
+if test $# -ne 3; then
+    exec gnome-terminal $@
+    exit 0
+elif test $1 != "-x"; then
+    exec gnome-terminal $@
+    exit 0
+fi
+
 # Read config files of libfm
 # Try user config file first, then the system-wide one in /etc/xdg/libfm
 CONFIG_HOME=
@@ -27,7 +35,6 @@ for DIR in "$CONFIG_HOME" "/etc/xdg"; do
     LEN=`expr length "$TERMINAL"`
     LEN=`expr "$LEN" - 9`
     TERMINAL=`expr substr "$TERMINAL" 10 $LEN`
-    echo $TERMINAL
     if test "$TERMINAL"; then
         break
     fi
@@ -35,7 +42,27 @@ done
 
 # no available terminal config
 if test -z "$TERMINAL"; then
-    exit 1
+    # fallback to xterm
+    TERMINAL=xterm
 fi
 
-exec $TERMINAL $@
+ARGS=
+if test "$TERMINAL" != "gnome-terminal"; then
+    if test $1 == '-x'; then
+        for ARG in $@; do
+            if test "$ARG" == '-x'; then
+                ARGS="$ARGS -e"
+            else
+                ARGS="$ARGS $ARG"
+            fi
+        done
+    fi
+fi
+
+echo $TERMINAL $ARGS
+if test "$ARGS"; then
+    exec $TERMINAL $ARGS
+else
+    exec $TERMINAL $@
+fi
+exit 1
