--- a/configure.ac
+++ b/configure.ac
@@ -56,8 +56,9 @@ PKG_CHECK_MODULES(MENU_CACHE, [$menu_modules])
 AC_SUBST(MENU_CACHE_CFLAGS)
 AC_SUBST(MENU_CACHE_LIBS)
 
-GETTEXT_PACKAGE=pcmanfm
+GETTEXT_PACKAGE=libfm
 AC_SUBST(GETTEXT_PACKAGE)
+AM_GLIB_GNU_GETTEXT
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
 AC_CONFIG_FILES([
