--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,6 +9,7 @@ src/gtk/fm-progress-dlg.c
 src/gtk/fm-file-menu.c
 src/gtk/fm-file-properties.c
 src/gtk/fm-dnd-dest.c
+src/gtk/fm-app-menu-view.c
 
 src/job/fm-dir-list-job.c
 src/job/fm-file-ops-job-delete.c
