Revert "Revert "Merge branch 'master' of ssh://pcmanfm.git.sourceforge.net/gitroot/pcmanfm/libfm""
This reverts commit 38e6b56e5bef971aecf70cccebbb0c78a30d17ae.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,3 +17,4 @@ src/gtk/fm-gtk-utils.c
 src/gtk/fm-places-view.c
 src/gtk/fm-progress-dlg.c
 src/job/fm-dir-list-job.c
+src/job/fm-file-ops-job-delete.c
