--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -21,4 +21,4 @@ CLEANFILES = \
 # Purge GtkBuilder UI files
 %.ui: %.glade
 	cp $< $@
-#	$(top_builddir)/src/xml-purge $@
+	$(top_builddir)/src/xml-purge $@
