* Split libfm and libfm-gtk and give them different pkgconfig files. * Move header files of libfm to /usr/include/libfm/libfm.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,11 @@ SUBDIRS=src po data
 
 EXTRA_DIST = \
 	libfm.pc.in \
+	libfm-gtk.pc.in \
 	$(NULL)
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libfm.pc
+pkgconfig_DATA = \
+	libfm.pc \
+	libfm-gtk.pc \
+	$(NULL)
