--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,12 +1,24 @@
+NULL=
+
 SUBDIRS=ui
 
 mimedir = $(datadir)/mime/packages
 mime_DATA = libfm.xml
 
 libfmconfdir = $(sysconfdir)/xdg/libfm
-libfmconf_DATA = libfm.conf
+libfmconf_DATA = \
+	libfm.conf \
+	pref-apps.conf \
+	$(NULL)
+
+desktopdir=$(datadir)/applications
+desktop_DATA= \
+	libfm-defapps.desktop \
+	$(NULL)
 
 EXTRA_DIST= \
 	$(libfmconf_DATA) \
-	$(mime_DATA)
+	$(mime_DATA) \
+	$(desktop_DATA) \
+	$(NULL)
 
