--- a/configure.ac
+++ b/configure.ac
@@ -94,7 +94,7 @@ AC_CONFIG_FILES([
     src/Makefile
     data/Makefile
     data/ui/Makefile
-    data/libfm-defapps.desktop
+    data/libfm-pref-apps.desktop
     po/Makefile.in
     libfm.pc
     libfm-gtk.pc
