--- a/data/libfm-pref-apps.desktop.in
+++ b/data/libfm-pref-apps.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Name=Preferred Applications
 Name[zh_TW]=偏好的應用程式
 Icon=preferences-desktop
-Exec=libfm-defapps
+Exec=libfm-pref-apps
 StartupNotify=true
 Categories=Settings;DesktopSettings;X-LXDE-Settings;GTK;
 NotShowIn=GNOME;XFCE;KDE;
