--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ src/gtk/fm-places-view.c
 src/gtk/fm-file-menu.c
 src/gtk/fm-dnd-dest.c
 src/gtk/fm-app-chooser-dlg.c
+src/gtk/fm-app-chooser-combo-box.c
 src/gtk/fm-folder-view.c
 src/gtk/fm-app-menu-view.c
 src/gtk/fm-gtk-utils.c
