--- a/data/libfm-pref-apps.desktop.in
+++ b/data/libfm-pref-apps.desktop.in
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Preferred Applications
+Name[it_IT]=Applicazioni preferite
 Name[zh_TW]=偏好的應用程式
 Icon=preferences-desktop
 Exec=libfm-pref-apps
