--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,11 @@ PKG_CHECK_MODULES(GTK, [$pkg_modules])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
+glib_modules="glib-2.0 >= 2.18.0"
+PKG_CHECK_MODULES(GLIB, [$glib_modules])
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
 gio_modules="gthread-2.0 gio-unix-2.0 glib-2.0 >= 2.18.0"
 PKG_CHECK_MODULES(GIO, [$gio_modules])
 AC_SUBST(GIO_CFLAGS)
