work on file search job

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ job_SOURCES = \
 	job/fm-file-ops-job-xfer.c \
 	job/fm-file-ops-job-delete.c \
 	job/fm-file-ops-job-change-attr.c \
+	job/fm-file-search-job.c \
 	$(NULL)
 
 libfm_SOURCES = \
@@ -115,6 +116,7 @@ libfminclude_HEADERS = \
 	job/fm-file-ops-job-xfer.h \
 	job/fm-file-ops-job-delete.h \
 	job/fm-file-ops-job-change-attr.h \
+	job/fm-file-search-job.h \
 	$(NULL)
 
 libfmgtkincludedir = $(includedir)/libfm/libfm
