folder view; work on rules funcs

--- a/src/fm.h.in
+++ b/src/fm.h.in
@@ -57,6 +57,7 @@
 #include "fm-file-ops-job.h"
 #include "fm-file-ops-job-xfer.h"
 #include "fm-job.h"
+#include "fm-file-search.h"
 
 G_BEGIN_DECLS
 
