Refactor and rework FmPath with unit tests. Fix various URI parsing-related bugs. Add new APIs: fm_path_new_for_path, fm_path_new_for_uri, fm_path_new_for_str, and fm_path_new_for_commandline_arg.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -19,5 +19,5 @@ TEST_PROGS += fm-path
 fm_path_SOURCES = test-fm-path.c
 fm_path_LDADD= \
 	$(GLIB_LIBS) \
-	$(top_builddir)/src/libfm.la \
+	../libfm.la \
 	$(NULL)
