Add auto-scroll APIs for dnd.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,6 +107,7 @@ libfm_gtk_SOURCES = \
 	gtk/fm-cell-renderer-pixbuf.c \
 	gtk/fm-dnd-src.c \
 	gtk/fm-dnd-dest.c \
+	gtk/fm-dnd-auto-scroll.c \
 	gtk/fm-gtk-utils.c \
 	gtk/fm-thumbnail.c \
 	gtk/fm-tab-label.c \
@@ -161,6 +162,7 @@ libfmgtkinclude_HEADERS = \
 	gtk/fm-cell-renderer-pixbuf.h \
 	gtk/fm-dnd-src.h \
 	gtk/fm-dnd-dest.h \
+	gtk/fm-dnd-auto-scroll.h \
 	gtk/fm-gtk-utils.h \
 	gtk/fm-thumbnail.h \
 	gtk/fm-tab-label.h \
