Prompt before executing executable files. Fix #3048799 - pcmanfm executes anything without warning.

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -8,6 +8,7 @@ ui_in_files= \
 	ask-rename.glade \
 	app-chooser.glade \
 	preferred-apps.glade \
+	exec-file.glade \
 	$(NULL)
 ui_DATA = $(ui_in_files:.glade=.ui)
 
