--- a/configure.ac
+++ b/configure.ac
@@ -43,15 +43,20 @@ PKG_CHECK_MODULES(GTK, [$pkg_modules])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-glib_modules="glib-2.0 >= 2.18.0 gobject-2.0"
+glib_modules="glib-2.0 >= 2.18.0 gobject-2.0 >= 2.24.0"
 PKG_CHECK_MODULES(GLIB, [$glib_modules])
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
-gio_modules="gthread-2.0 gio-unix-2.0 glib-2.0 >= 2.18.0 gobject-2.0"
+gio_modules="gthread-2.0 gio-unix-2.0 >= 2.24.0 glib-2.0 >= 2.24.0 gobject-2.0"
 PKG_CHECK_MODULES(GIO, [$gio_modules])
 AC_SUBST(GIO_CFLAGS)
 AC_SUBST(GIO_LIBS)
+
+pango_modules="pango >= 1.16.0"
+PKG_CHECK_MODULES(PANGO, [$pango_modules])
+AC_SUBST(PANGO_CFLAGS)
+AC_SUBST(PANGO_LIBS)
 
 gmodule_modules="gmodule-2.0"
 PKG_CHECK_MODULES(GMODULE, [$gmodule_modules])
