--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/base/fm-path.c
 src/gtk/fm-progress-dlg.c
 src/gtk/fm-file-properties.c
 src/gtk/fm-places-view.c
+src/gtk/fm-side-pane.c
 src/gtk/fm-file-menu.c
 src/gtk/fm-dnd-dest.c
 src/gtk/fm-app-chooser-dlg.c
