--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -18,7 +18,7 @@ EXTRA_DIST = \
 	$(NULL)
 
 # Purge GtkBuilder UI files
-%.ui: %.glade
+.glade.ui:
 	test -f $(top_builddir)/src/xml-purge || \
 		(cd $(top_builddir)/src && $(MAKE) xml-purge)
 	cp $< $@
