Update for .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-Makefile.in
+Makefile.in*
 Makefile
-.libs
-.deps
+.[a-z]*
+*~
 *.o
 *.lo
 *.la
@@ -9,14 +9,34 @@ Makefile
 config.*
 configure
 depcomp
-aclocal.m4
+*.pc
+*m4
 autom4te.cache
 stamp-*
 libtool
 ltmain.sh
 missing
 install-sh
+compile
+*.stamp
+gtk-doc.make
 
 *.mo
-POTFILES.in
-fm-*-marshal.[ch]
+*.gmo
+POTFILES*
+LINGUAS
+fm*-marshal.[ch]
+*.ui
+src/actions/*.[ch]
+*.1
+*.desktop
+src/libfm-pref-apps
+src/tests/fm-path
+src/vapi/fm-actions.vapi
+src/xml-purge
+docs/reference/libfm/*/*
+docs/reference/libfm/libfm-decl*
+docs/reference/libfm/libfm-overrides.txt
+docs/reference/libfm/libfm-un*
+docs/reference/libfm/libfm.*
+docs/reference/libfm/version.xml
